--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,7 @@
 
         <div class="download-section">
             <h3 style="margin-bottom: 20px;">Download Now</h3>
-            <a href="https://github.com/Kumar-Saurabh-Tiwari/sbs/releases/download/v1.0.0/netflix-app-release.apk" class="btn btn-primary">
+            <a href="https://github.com/Kumar-Saurabh-Tiwari/sbs/releases/download/v1.0.0/netflix-app-latest.apk" class="btn btn-primary">
                 📥 Download APK (46 MB)
             </a>
             <a href="https://github.com/Kumar-Saurabh-Tiwari/sbs" class="btn btn-secondary">
